feat(front): 레이아웃 설정

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,4 +3,14 @@
 @tailwind utilities;
 
 :root {
+  --primary-blue: #6174db;
+  --base-black: #101010;
+  --accent-red: #ff6347;
+  --medium-gray: #a9a9a9;
+  --light-gray: #eeeeee;
+}
+
+html,
+body {
+  background-color: var(--main-color);
 }
