feat(front): 레이아웃에 header, footer 추가

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -8,6 +8,8 @@
   --accent-red: #ff6347;
   --medium-gray: #a9a9a9;
   --light-gray: #eeeeee;
+  --header-height: 40px;
+  --footer-height: 40px;
 }
 
 html,
